# pybeginner_training100

./: .gitignore  LICENSE  PythonBootCampfor筑波_発表資料.pptx  README.md  pyproject.toml  python_boot_camp_tsukuba.md  requirements.txt  setup.sh
Doc/: install_jupyter_ext.md  jupyter_extension_enable.md  グループ研修_PythonBootCamp_for_筑波_開催案内.pptx  添付資料_問題一覧.md
cluster/: README.md  secret_trainee_idpass.md  アカウント発行用紙.docx
source/: sampletext.ipynb  training00.ipynb  training01.ipynb  training02.ipynb  training03.ipynb  training04.ipynb  training05.ipynb  training06.ipynb  training07.ipynb  training08.ipynb  training09.ipynb  training0_sample.ipynb  training10.ipynb  training11.ipynb  training12.ipynb  training13.ipynb  training14.ipynb  training15.ipynb  training_master.ipynb
source/answer/: evaluation.py  training01.py  training1-1.py  training1-2.py  training1.py  training10.py  training11.py  training12.py  training13.py  training14.py  training15-1.py  training16-1.py  training16.py  training17-1.py  training17.py  training18.py  training19-1.py  training19-2.py  training19.py  training2-1-1-.py  training2-2.py  training2.py  training20-1.py  training20-2.py  training21.py  training22.py  training24.py  training25.py  training26.py  training27.py  training29.py  training3-1.py  training3.py  training30.py  training31.py  training39.py  training4.py  training5-1.py  training5.py  training55-3.py  (+7 more)
source/input/: 1-2-2021.xlsx  2-2-2021.xlsx  check_mypy.py  formatter_test_black.py  lint_test_flake8.py  sample.csv  sample.json  sample58.txt  sample84.txt  sample90.csv  (+6 more)
(+2 files in other folders)
