[tool.poetry]
name = "pybeginner-training100"
version = "0.1.0"
description = "Project to create training content for 100 Python knocks"
authors = ["Hayato <yasonomazon75@gmail.com>"]
readme = "README.md"
packages = [{include = "pybeginner_training100"}]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = {version = "^5.1.1", optional = true, extras = ["docs"]}
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
pandas = "^1.5.0"
openpyxl = "^3.0.10"
japanize-matplotlib = "^1.1.3"
PyPDF2 = "^2.11.0"
python-docx = "^0.8.11"
pydantic = "^1.10.2"
Pillow = "^9.2.0"
"pdfminer.six" = "^20220524"
tox = "^3.26.0"
pre-commit = "^2.20.0"
pendulum = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
mypy = "^0.971"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
